--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,29 @@
-
-#https://github.com/docker/awesome-compose
+# https://github.com/docker/awesome-compose
 services:
   web_server_one:
     build:
       context: ./bufferization
       dockerfile: Dockerfile
-    # В проде лучше задавать имя образа явно
+      args:
+        APP_PORT: ${BUFFER_PORT:-8000}
+        APP_MODULE: buff:app
     image: docker_test/buffer:prod
     ports:
-      - 8000:8000
-      
+      - "${BUFFER_PORT:-8000}:${BUFFER_PORT:-8000}"
     restart: always
+
   web_server_two:
     build:
       context: ./python-docker-example
-      dockerfile: Dockerfile copy
+      dockerfile: Dockerfile
+      args:
+        APP_PORT: ${APP_PORT:-8001}
+        APP_MODULE: app:app
     image: docker_test/app:prod
     ports:
-      - 8001:8001
+      - "${APP_PORT:-8001}:${APP_PORT:-8001}"
     depends_on:
       - web_server_one
     volumes:
       - ./volume_data:/app/model
+    restart: always
